aws-elb-asg-pattern/vpc.tf
resource "aws_vpc" "tfer--vpc-0582dfce4fb601402" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "10.105.0.0/16"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"
  #ipv6_netmask_length                  = "0"

  tags = {
    Name  = "practice-prod-vpc"
    group = "practice-prod"
  }

  tags_all = {
    Name  = "practice-prod-vpc"
    group = "practice-prod"
  }
}
